--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "authy/php": "^3.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "rinvex/authy": "^3.0",
+        "twilio/sdk": "^5.31",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
